@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 2.01 - Sat Dec 20 2025
+
+    * Update DB InfraGO delay / QoS codes
+
 Travel::Status::DE::IRIS 2.00 - Fri Sep 19 2025
 
     * Update station database
